Stefan Friend Requests

--- a/themes/dolphin/html/admin/manage_reports_photo.html
+++ b/themes/dolphin/html/admin/manage_reports_photo.html
@@ -1,6 +1,6 @@
 <div class="page-inner">
 	<!-- <div class="page-title">{$lng->admin_desc_manage_reports}</div> -->
-	<div class="page-title"><a href="index.php?a={$a}&b=manage_reports"><strong>Messages</strong></a> | <a href="index.php?a={$a}&b=manage_reports_photo">Album photos</a></div>
+	<div class="page-title"><a href="index.php?a={$a}&b=manage_reports">Messages</a> | <a href="index.php?a={$a}&b=manage_reports_photo"><strong>Album photos</strong></a></div>
 </div>
 {$message}
 <div class="message-divider"></div>
