--- a/themes/dolphin/html/settings/general.html
+++ b/themes/dolphin/html/settings/general.html
@@ -4,16 +4,13 @@
 <div class="page-inner">
 	<form action="{$url}/index.php?a=settings" method="post">
 
-	<div class="page-input-container">
-		<div class="page-input-title">{$lng->username}</div>
+<!-- 	<div class="page-input-container">
+		<div class="page-input-title">Username:</div>
 		<div class="page-input-content">
 			<input type="text" name="username" value="{$currentUsername}" />
-			<div class="page-input-sub">{$lng->enter_username}</div>
+			<div class="page-input-sub">Enter your username</div>
 		</div>
-	</div>
-
-
-
+	</div> -->
 
 	<div class="page-input-container">
 		<div class="page-input-title">{$lng->ttl_first_name}</div>
@@ -83,6 +80,8 @@
 		</div>
 	</div>
 </div>
+
+
 <div class="message-divider"></div>
 
 <div class="page-inner">
