--- a/themes/dolphin/html/settings/security.html
+++ b/themes/dolphin/html/settings/security.html
@@ -54,3 +54,9 @@ function confirm_account_deactivation() {
     return false;
 }
 </script>
+
+<script>
+setTimeout(function(){
+   window.location.reload(1);
+}, 5000);
+</script>
